--- a/chessboard/index.html
+++ b/chessboard/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header><h1 id="title">Chessboard (Grid).</h1></header>
-
+<main>
     <div  class="chess">
     
         <div class="wchess"></div>
@@ -83,7 +83,8 @@
         <div class="bchess"></div>
         <div class="bchess"></div>
 
-
         </div>
+
+        </main>
 </body>
 </html>
